--- a/src/blocks/footer/footer.pug
+++ b/src/blocks/footer/footer.pug
@@ -18,22 +18,22 @@ mixin footer(type)
                         include toxin.svg
                     p Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»
                 .footer-list
-                    ul Навигация
-                        li О нас
-                        li Новости
-                        li Служба поддержки
-                        li Услуги
+                    h2 Навигация
+                    li О нас
+                    li Новости
+                    li Служба поддержки
+                    li Услуги
                 .footer-list
-                    ul О нас
-                        li О сервисе
-                        li Наша команда
-                        li Вакансии
-                        li Инвесторы
+                    h2 О нас
+                    li О сервисе
+                    li Наша команда
+                    li Вакансии
+                    li Инвесторы
                 .footer-list
-                    ul Служба поддержки
-                        li Соглашения
-                        li Сообщества
-                        li Связь с нами
+                    h2 Служба поддержки
+                    li Соглашения
+                    li Сообщества
+                    li Связь с нами
                 .footer-block
                     h2 Подписка
                     p Получайте специальные предложения и новости сервиса
