--- a/src/blocks/header/header.pug
+++ b/src/blocks/header/header.pug
@@ -1,8 +1,8 @@
 mixin header(type)
     nav
         #logo
-            include logo.svg
-            include toxin.svg
+            include ./logo.svg
+            include ./toxin.svg
         #menu
             ul
                 li <b>О нас</b>
