--- a/src/styles/uikit.css
+++ b/src/styles/uikit.css
@@ -1,10 +1,15 @@
 @import '../blocks/header/header.css';
 @import '../blocks/footer/footer.css';
+@import '../blocks/colors/colors.scss';
 
 body {
     display: flex;
     flex-direction: column;
     background: #E5E5E5;
+    margin: 0;
+}
+
+#headers-footers {
     margin: 140px 0;
 }
 
