--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,2 +1,3 @@
 @import '../fonts/quicksand/quicksand.css';
 @import '../fonts/montserrat/montserrat.css';
+@import '../fonts/material-icons/mi.css';
