--- a/src/blocks/footer/footer.pug
+++ b/src/blocks/footer/footer.pug
@@ -37,10 +37,9 @@ mixin footer(type)
                 .footer-block
                     h2 Подписка
                     p Получайте специальные предложения и новости сервиса
-                    #submit-email
+                    form#submit-email
                         input(type="email", name="sub", placeholder='Email')
                         submit arrow_forward
-
             #lower
                 p Copyright © 2018 Toxin отель. Все права зачищены.
                 #contacts
