--- a/src/blocks/header/header.pug
+++ b/src/blocks/header/header.pug
@@ -13,7 +13,7 @@ mixin header(type)
                 li Соглашения
                     span.material-icons keyboard_arrow_down
             if type
-                p Julius Ceasar
+                p Юлий Цезарь
             else
                 button#login Войти
                 button#reg Зарегистрироваться
