--- a/src/styles/uikit.css
+++ b/src/styles/uikit.css
@@ -1,12 +1,14 @@
 @import '../blocks/header/header.css';
 @import '../blocks/footer/footer.css';
 @import '../blocks/colors/colors.scss';
+@import '../blocks/form/elements.scss';
 
 body {
     display: flex;
     flex-direction: column;
     background: #E5E5E5;
     margin: 0;
+    font-family: 'montserrat', sans-serif;
 }
 
 #headers-footers {
@@ -19,4 +21,10 @@ nav {
 
 footer {
     margin: 0 auto 40px;
+}
+
+#elements {
+    display: flex;
+    flex-direction: column;
+    margin: 0 140px;
 }
