--- a/src/blocks/colors/colors.scss
+++ b/src/blocks/colors/colors.scss
@@ -37,21 +37,24 @@ $list: 1, 0.75, 0.5, 0.25, 0.05;
     p:nth-child(2) {
         color: rgba(31, 32, 65, 0.75);
     }
-    h3 {
-        text-transform: uppercase;
-    }
-    h1 {
-        font-size: 24px;
-        line-height: 30px;
-    }
-    h2 {
-        font-size: 19px;
-        line-height: 24px;
-    }
-    h3 {
-        font-size: 12px;
-        line-height: 15px;
-    }
+}
+
+h1 {
+    font-size: 24px;
+    line-height: 30px;
+}
+
+h2 {
+    font-size: 19px;
+    line-height: 24px;
+}
+
+h3 {
+    font-size: 12px;
+    line-height: 15px;
+    text-transform: uppercase;
+    font-weight: bold;
+    margin: 0;
 }
 
 #type {
