--- a/src/uikit.pug
+++ b/src/uikit.pug
@@ -15,4 +15,5 @@ html(lang="ru")
             +header(true)
             +footer(true)
             +footer(false)
-        
+        #elements
+            include ./blocks/form/elements.pug
