--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -14,6 +14,7 @@ li {
     padding: 0 140px;
     height: 70px;
     box-shadow: 0 10px 20px rgba(31, 32, 65, 0.05);
+    box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
   }
   
   #menu {
