--- a/src/fonts/material-icons/mi.css
+++ b/src/fonts/material-icons/mi.css
@@ -24,5 +24,5 @@
         -webkit-font-smoothing:antialiased;
         text-rendering:optimizeLegibility;
         -moz-osx-font-smoothing:grayscale;
-        font-feature-settings:'liga'
+        font-feature-settings:'liga';
       }
