--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -1,3 +1,4 @@
 @import '../fonts/quicksand/quicksand.css';
 @import '../fonts/montserrat/montserrat.css';
 @import '../fonts/material-icons/mi.css';
+@import '../fonts/fa-brands/fab.css';
