--- a/src/blocks/form/elements.pug
+++ b/src/blocks/form/elements.pug
@@ -51,7 +51,7 @@ mixin input-email
         #likes
             button.like-btn
                 i.mi-icons favorite_border
-                i.like-txt
+                i.like-txt 2
         h3 rate button
         #rating
             .rating
@@ -84,3 +84,22 @@ mixin input-email
     .elem-col
     .elem-col
 #review
+    .features.dark75
+        div
+            i.material-icons insert_emoticon
+            b Комфорт
+            p Шумопоглощающие стены
+        hr
+        div
+            i.material-icons location_city
+            b Удобство
+            p Окно в каждой из спален
+        hr
+    .comments.dark75
+        img(src=require('./blocks/form/avatar.png').default alt='user avatar')
+        button.like-btn
+            i.mi-icons favorite_border
+            i.like-txt 11
+        b Мурад Сарафанов
+        span 5 дней назад
+        p Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.
