--- a/src/blocks/form/elements.scss
+++ b/src/blocks/form/elements.scss
@@ -1,5 +1,3 @@
-@import "~px-jquery-pagination/px-pagination.css";
-
 #submit-email {
     display: flex;
     margin: 0;
@@ -360,9 +358,129 @@ button[class="like-btn"] {
     }
 }
 
-.rating {
+.rating, .features .material-icons {
     background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+
+#review {
+    display: flex;
+    justify-content: space-between;
+}
+
+.features {
+    width: max-content;
+    font-size: 14px;
+    div {
+        margin: 0;
+        display: grid;
+        column-gap: 10px;
+        grid-template-areas: 'icon head' 'icon text';
+        grid-template-columns: 48px 1fr;
+        > * {
+            margin: 0;
+        }
+        i {
+            grid-area: icon;
+            width: 48px;
+            height: 48px;
+        }
+        p {
+            grid-area: text;
+        }
+        b {
+            grid-area: head;
+        }
+    }
+    .material-icons {
+        font-size: 48px;
+        line-height: 41px;
+    }
+    hr {
+        margin: 20px 0;
+        border-top: 1px solid rgba(31, 32, 65, 0.1);
+    }
+}
+
+.px-paginate-container{
+    user-select: none;
+}
+.px-paginate-container.px-left{
+    float: left;
+    
+}
+.px-paginate-container .d-none{
+    display: none;
+}
+.px-paginate-container.px-center{
+    display: table;
+    margin: 0 auto;    
+}
+.px-paginate-container.px-right {
+    float: right;
+}
+.px-paginate-container .px-btn, .px-paginate-container .px-points{
+    float: left;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    color: rgba(31, 32, 65, 0.5);
+}
+
+.px-paginate-container .px-btn:hover{
+    cursor: pointer;
+}
+.px-paginate-container .px-btn.selected{
+    background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+    border-radius: 22px;
+    color: #fff;
+    border: none;
+}
+
+.px-btn-page {
+    font-size: 12px;
+}
+
+.px-btn-prev, .px-btn-next {
+    background: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
+    border-radius: 22px;
+}
+
+.px-paginate-container .px-btn.material-icons {
+    color: #fff;
+}
+
+.comments {
+    display: grid;
+    font-size: 14px;
+    line-height: 24px;
+    max-width: 700px;
+    grid-template-areas: 'img head' 'img date' 'like text';
+    grid-template-rows: repeat(2, min-content);
+    column-gap: 10px;
+    & * {
+        margin: 0;
+    }
+    img {
+        grid-area: img;
+        display: block;
+        background: #fff;
+    }
+    .like-btn {
+        grid-area: like;
+        margin: 10px auto;
+    }
+    b {
+        grid-area: head;
+    }
+    span {
+        grid-area: date;
+    }
+    p {
+        grid-area: text;
+        margin-top: 10px;
+    }
 }
