+ шрифт замена quicksand

--- a/src/fonts/quicksand/quicksand.css
+++ b/src/fonts/quicksand/quicksand.css
@@ -5,3 +5,9 @@
         url('quicksand.woff') format('woff'),
         url('quicksand.ttf') format('truetype');
     }
+
+@font-face {
+    font-family: 'open sans';
+    src:
+        url('opensans.ttf') format('truetype');
+}
